--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
     <title>Chess Game</title>
-    <link rel="stylesheet" href="chess.css">
+    <style>
+        .board {
+            width: 400px;
+            height: 400px;
+            border: 2px solid #333;
+            display: grid;
+            grid-template-columns: repeat(8, 1fr);
+        }
+        .square {
+            width: 50px;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 30px;
+            cursor: pointer;
+        }
+        .white {
+            background-color: #fff;
+        }
+        .black {
+            background-color: #999;
+        }
+        .selected {
+            background-color: #7fff7f;
+        }
+        .possible-move {
+            background-color: #7f7fff;
+        }
+    </style>
 </head>
 <body>
-    <div class="game-container">
-        <div class="board" id="chessboard"></div>
-        <div class="info-panel">
-            <div class="status" id="status"></div>
-            <div class="captured-pieces">
-                <div id="captured-white"></div>
-                <div id="captured-black"></div>
-            </div>
-            <div class="move-history" id="move-history"></div>
-        </div>
-    </div>
+    <div id="board" class="board"></div>
+    <div id="status"></div>
+
     <script src="chess.js"></script>
 </body>
 </html>
